small alignment fixes

--- a/_sass/casestudy.scss
+++ b/_sass/casestudy.scss
@@ -32,7 +32,7 @@ h3 {
   font-weight: 600;
   letter-spacing: -0.3px;
   line-height: 42px;
-  margin-top: 70px;
+  margin-top: 65px;
   margin-bottom: 35px;
   @include media-breakpoint-down(sm) {
     font-size: 28px;
